# GetOAuthToken

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_LOGGING.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  FEATURES.md  LICENSE  LOGGING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFRESH_TOKEN_GUIDE.md  TESTING.md  TEST_REPORT.md  TROUBLESHOOTING.md  clear-log.bat  config.example.json  package-lock.json  package.json  release.bat  run.bat  server.js  setup.bat  test-all.bat  test-build.bat  test-emailnator.bat  view-log.bat
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: emailnator.rs  lib.rs
